<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertDataActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headingTxt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/insert_data"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/headingTxt"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/enter_student_name_here"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:singleLine="true"
            android:maxLines="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edtbg"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addressEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_40sdp"
            android:hint="@string/enter_address_here"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:maxLines="2"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edtbg"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobileEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_40sdp"
            android:hint="@string/enter_mobile_number_here"
            android:gravity="center|start"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:maxLines="2"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edtbg"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/insertBtn"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/edtbg"
            android:backgroundTint="#03A9F4"
            android:text="@string/insert_data"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>