<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center|top"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem/random"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:singleLine="true"
        android:textStyle="normal"
        android:maxLines="1"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/addressTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem/random"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:textStyle="normal"
        android:maxLines="2"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobileTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem/random"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:singleLine="true"
        android:textStyle="normal"
        android:maxLines="1"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/delete"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>

</LinearLayout>